Fix radio buttons flickering when checked with reduced motion

--- a/material-elements.css
+++ b/material-elements.css
@@ -675,6 +675,11 @@ select:disabled {
 	input[type="checkbox"]::after,
 	input[type="range"],
 	progress {
+		-webkit-transition-delay: 0s;
+		   -moz-transition-delay: 0s;
+		    -ms-transition-delay: 0s;
+		     -o-transition-delay: 0s;
+		        transition-delay: 0s;
 		-webkit-transition-duration: 0s;
 		   -moz-transition-duration: 0s;
 		    -ms-transition-duration: 0s;
